1999-10-26  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup. [from wsanchez@apple.com]

1999-10-17  Ken Raeburn  <raeburn@raeburn.org>

	* klist.c (one_addr): Use getipnodebyaddr and inet_ntop if
	available.  Display ADDRTYPE_INET6 addresses if AF_INET6 is
	defined.

1999-09-01  Danilo Almeida  <dalmeida@mit.edu>

	* klist.c (do_ccache, show_credential): Use krb5_free_unparsed_name
	instead of free.

1999-08-26  Danilo Almeida  <dalmeida@mit.edu>

	* klist.c (show_credential): Index addresses array with i
	in a loop instead of 1.  (Thanks to jaltman@columbia.edu)

1999-08-09  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Use standard windows exe link flags.

Mon May 10 15:13:58 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Do win32 build in subdir.

Mon Feb  8 22:11:50 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* klist.c: Under Windows, #include winsock.h instead of
		sys/socket.h and netdb.h

	* Makefile.in: Under Windows, link against wsock32.lib to get
	 	gethostbyaddr().

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

1998-10-26  Marc Horowitz  <marc@mit.edu>

	* klist.c: add -a flag to print the ticket address, and -n flag to
	do so without attempting resolution.  Make klist use the new api
	for stringifying enctypes.

Tue Aug 11 23:38:53 1998  Matthew D Hancher  <mdh@mit.edu>

	* klist.c (do_ccache): Properly check the return value of
	krb5_cc_set_flags() so the right thing happens if there is no CC.
	
Mon Mar 30 17:08:07 1998  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* klist.c (main): Exit with a 0 exit status if everything okay

Wed Feb 18 15:42:57 1998  Tom Yu  <tlyu@mit.edu>
